--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\AILogic.cs" />
      <Compile Include="Assets\Create_Teams.cs" />
      <Compile Include="Assets\FSM1.cs" />
+     <Compile Include="Assets\FuzzyLogic.cs" />
      <Compile Include="Assets\Interaction.cs" />
      <Compile Include="Assets\LineOfSight.cs" />
      <Compile Include="Assets\Pathing.cs" />
